# ledger

./: .env.example  .gitignore  DESIGN.md  DOMAIN_NOTES.md  README.md  pyproject.toml  requirements.txt
ledger/: event_store.py
ledger/agents/: base_agent.py
ledger/domain/: errors.py  handlers.py
ledger/schema/: event_store.sql  events.py
scripts/: apply_schema.py  check_events.py  check_openrouter.py  check_registry.py  run_pipeline.py  setup_test_db.py  test_document_processing_real.py  verify_pipeline_events.py
src/: event_store.py  outbox_relay.py
src/agents/: base_agent.py  compliance_agent.py  credit_analysis_agent.py  document_agent.py  fraud_detection_agent.py  orchestrator_agent.py  stub_agents.py
src/aggregates/: agent_session.py  audit_ledger.py  compliance_record.py  credit_record.py  document_package.py  fraud_screening.py  loan_application.py
src/commands/: commands.py  handlers.py
src/integrity/: __init__.py  audit_chain.py  gas_town.py
src/mcp/: __init__.py  app.py  resources.py  server.py  tools.py
src/models/: events.py
src/projections/: agent_performance.py  application_summary.py  compliance_audit.py  daemon.py  projections.py
src/registry/: client.py
src/upcasting/: __init__.py  registry.py  upcasters.py
tests/: conftest.py  test_causal_chain.py  test_concurrency.py  test_domain_alignment.py  test_event_store.py  test_gas_town.py  test_mcp_lifecycle.py  test_narratives.py  test_projections.py  test_registry_client.py  test_upcasting.py
tests/domain/: test_aggregates.py  test_compliance_audit.py
(+4 files in other folders)
