[project]
name = "ledger"
version = "0.1.0"
description = "Agentic Event Store & Enterprise Audit Infrastructure"
dependencies = [
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "faker>=25.0.0",
    "ollama>=0.6.1",
    "langgraph>=1.1.3",
    "reportlab>=4.4.10",
    "openpyxl>=3.1.5",
    "fastmcp>=3.1.1",
    "python-dotenv>=1.2.2",
    "docling>=2.81.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
managed = true
